# monkey

./: .env.example  .gitignore  .updater.config.example.json  ANDROID_SIGNING_SETUP.md  CONTRIBUTING.md  COPYRIGHT  LICENSE_HEADER  PERFORMANCE_OPTIMIZATION.md  PROMPT_FILES_README.md  README.md  REMOTE_BUILD_FIX.md  REMOTE_BUILD_SUCCESS.md  SCROLL_OPTIMIZATION.md  TAURI_FILE_FORMAT_FIX.md  clear-tauri-cache.sh  index.html  nginx-pwa.conf  package.json  tag-blacklist-regex.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: CHANGELOG.md  GITEA_SYNC_SETUP.md  README.md  SECRETS_CHECKLIST.md  publish.yml  test-gitea-connection.yml  update-gitea-json.yml
dev-dist/: sw.js
docs/: CLEAR_CACHE_GUIDE.md  DEPLOYMENT_CONFIG.md  PWA_DEPLOYMENT_GUIDE.md  PWA_DEPLOYMENT_QUICK_START.md
scripts/: .gitignore  QUICK_START.md  README.md  REMOTE_BUILD_GUIDE.md  WINDOWS_REMOTE_SETUP.md  create-release-json.sh  deploy-pwa.sh  get-keystore-base64.sh  install-app.command  sync-to-release.sh  test-remote-setup.sh  update-version.sh  view-android-logs.sh
src/: index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  stock_data.rs  tag_processor.rs  tauri_commands.rs  traffic_lights.rs
src/api/: ai-analyses-api.ts  api.ts  holdings-api.ts  operation-api.ts  rust-tag-api.ts  settings-api.ts  stock-details-api.ts  stock-history-api.ts
src/components/: FloatingText.tsx
(+183 files in other folders)
